<resources>
    <string name="app_name">ProyectoE7Bedu</string>
    <!--anthony-->
    <string name="delete">Eliminar</string>
    <string name="share">Compartir</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>
    <string name="delete_element">Deleting element</string>
    <string name="sharing_element">Sharing element</string>
    <string name="user">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="drawer.home">Home</string>
    <string name="drawer.account">Cuenta</string>
    <string name="drawer.payments">Pago</string>
    <string name="drawer.settings">Configuración</string>
    <string name="drawer.extra">Adicional</string>
    <string name="drawer.about">Acerca de</string>
    <string name="drawer.privacy">Privacidad</string>

    <string name="txt_favorites">Favoritos</string>
    <string name="drawer.favorites">Favoritos</string>
    <string name="txt_status">Estatus</string>
    <string name="drawer.status">Estatus</string>
    <string name="txt_authors">Autores</string>
    <string name="drawer.authors">Autores</string>
    <string name="txt_series">Series</string>
    <string name="drawer.series">Series</string>
    <string name="txt_collections">Colecciones</string>
    <string name="drawer.collections">Colecciones</string>
    <string name="txt_formats">Formats</string>
    <string name="drawer.formats">Formats</string>

</resources>