<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Menu Hamburguesa"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonEstatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/buttonEstatus"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/azulado"
        android:text="@string/txt_status"
        app:layout_constraintBottom_toTopOf="@+id/buttonSerie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonSerie"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/azulado"
        android:text="@string/txt_series"
        app:layout_constraintBottom_toTopOf="@+id/buttonFavorito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEstatus" />

    <Button
        android:id="@+id/buttonFavorito"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/azulado"
        android:text="@string/txt_favorites"
        app:layout_constraintBottom_toTopOf="@+id/buttonColeccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSerie" />

    <Button
        android:id="@+id/buttonColeccion"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/azulado"
        android:text="@string/txt_collections"
        app:layout_constraintBottom_toTopOf="@+id/buttonAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavorito" />

    <Button
        android:id="@+id/buttonAutor"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/azulado"
        android:text="@string/txt_authors"
        app:layout_constraintBottom_toTopOf="@+id/buttonFormato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonColeccion" />

    <Button
        android:id="@+id/buttonFormato"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@color/azulado"
        android:text="@string/txt_formats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAutor" />


</androidx.constraintlayout.widget.ConstraintLayout>